# ubpf

./: CMakeLists.txt
.github/scripts/: build-wasm.sh
.github/workflows/: main.yml  wasm.yml  windows.yml
bpf/: CMakeLists.txt
cmake/: platform.cmake  settings.cmake
tests/: callx-memfrob.data  callx-save.data  callx.data
ubpf_plugin/: CMakeLists.txt
vm/: CMakeLists.txt  ebpf.h  ubpf_config.h.inc  ubpf_int.h  ubpf_jit.c  ubpf_jit_arm64.c  ubpf_jit_wasm.c  ubpf_jit_x86_64.c  ubpf_jit_x86_64.h  ubpf_vm.c
vm/inc/: ubpf.h
wasm/: CMakeLists.txt  README.md  main.ts  package-lock.json  package.json  ubpf.ts  ubpf_lib.cc  ubpf_test.html  ubpf_types.ts  ubpf_utils.ts
wasm_test/: CMakeLists.txt  run-interpret.sh  run-jit.sh
wwasm/: CMakeLists.txt  main.ts  package-lock.json  tsconfig.json  ubpf.ts  ubpf_test.html  ubpf_wasm.c
